--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "fweiReactNative",
-  "displayName": "fweiReactNative"
+  "name": "feuerwehreinsatz.info",
+  "displayName": "feuerwehreinsatz.info"
 }
