--- a/ios/fweiReactNative.xcodeproj/xcshareddata/xcschemes/fweiReactNative.xcscheme
+++ b/ios/fweiReactNative.xcodeproj/xcshareddata/xcschemes/fweiReactNative.xcscheme
@@ -30,7 +30,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "fweiReactNative.app"
-               BlueprintName = "fweiReactNative"
+               BlueprintName = "feuerwehreinsatz.info"
                ReferencedContainer = "container:fweiReactNative.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -54,6 +54,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -72,7 +73,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "fweiReactNative.app"
-            BlueprintName = "fweiReactNative"
+            BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -83,6 +84,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -95,10 +97,22 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "fweiReactNative.app"
-            BlueprintName = "fweiReactNative"
+            BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -114,7 +128,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "fweiReactNative.app"
-            BlueprintName = "fweiReactNative"
+            BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
