--- a/ios/fweiReactNative.xcodeproj/xcshareddata/xcschemes/fweiReactNative.xcscheme
+++ b/ios/fweiReactNative.xcodeproj/xcshareddata/xcschemes/fweiReactNative.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "fweiReactNative.app"
+               BuildableName = "feuerwehreinsatz.info.app"
                BlueprintName = "feuerwehreinsatz.info"
                ReferencedContainer = "container:fweiReactNative.xcodeproj">
             </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fweiReactNative.app"
+            BuildableName = "feuerwehreinsatz.info.app"
             BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
@@ -96,7 +96,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fweiReactNative.app"
+            BuildableName = "feuerwehreinsatz.info.app"
             BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
@@ -127,7 +127,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "fweiReactNative.app"
+            BuildableName = "feuerwehreinsatz.info.app"
             BlueprintName = "feuerwehreinsatz.info"
             ReferencedContainer = "container:fweiReactNative.xcodeproj">
          </BuildableReference>
