--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.2",
+    "react-native-cookies": "^3.3.0",
+    "react-native-fs": "^2.12.1",
     "react-native-webkit-localstorage-reader": "^2.0.4",
     "react-navigation": "^1.5.8"
   },
