--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.2",
+    "babel-preset-react-native": "^5.0.2",
+    "react": "^16.6.3",
+    "react-native": "^0.57.8",
     "react-native-cookies": "^3.3.0",
     "react-native-fs": "^2.12.1",
     "react-native-webkit-localstorage-reader": "^2.0.4",
-    "react-navigation": "^1.5.8"
+    "react-navigation": "^1.5.8",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "metro-react-native-babel-preset": "^0.45.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
     "babel-jest": "23.0.0-alpha.0",
-    "babel-preset-react-native": "4.0.0",
+    "babel-preset-react-native": "^5.0.2",
     "jest": "22.4.2",
     "react-test-renderer": "^16.3.0-alpha.1"
   },
