--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fabric')
     compile project(':react-native-fs')
     compile project(':react-native-cookies')
     compile fileTree(dir: "libs", include: ["*.jar"])
