--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
     "babel-preset-react-native": "^5.0.2",
+    "metro-react-native-babel-preset": "^0.45.1",
     "react": "^16.6.3",
     "react-native": "^0.57.8",
     "react-native-cookies": "^3.3.0",
+    "react-native-fabric": "^0.5.2",
     "react-native-fs": "^2.12.1",
     "react-native-webkit-localstorage-reader": "^2.0.4",
-    "react-navigation": "^1.5.8",
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "metro-react-native-babel-preset": "^0.45.1"
+    "react-navigation": "^1.5.8"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
