--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-cookies": "^3.3.0",
     "react-native-fabric": "^0.5.2",
     "react-native-fs": "^2.12.1",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-webkit-localstorage-reader": "^2.0.4",
     "react-navigation": "^1.5.8"
   },
