iOS 13 compatibility update
+ updates react native to latest version
+ fixes scroll bouncing bug

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,9 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_geolocation')
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-webview')
     compile project(':react-native-keep-awake')
     compile project(':react-native-fabric')
     compile project(':react-native-fs')
