--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@react-native-community/async-storage": "^1.6.2",
+    "@react-native-community/geolocation": "^2.0.2",
     "babel-preset-react-native": "^5.0.2",
     "metro-react-native-babel-preset": "^0.45.1",
     "react": "^16.6.3",
-    "react-native": "^0.57.8",
+    "react-native": "^0.60.6",
     "react-native-cookies": "^3.3.0",
     "react-native-fabric": "^0.5.2",
     "react-native-fs": "^2.12.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-webkit-localstorage-reader": "^2.0.4",
+    "react-native-webview": "^7.2.5",
     "react-navigation": "^1.5.8"
   },
   "devDependencies": {
