--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-firebase/app": "^18.3.1",
-    "@react-native-firebase/crashlytics": "^18.3.1",
+    "@react-native-firebase/app": "^18.3.2",
+    "@react-native-firebase/crashlytics": "^18.3.2",
     "@react-native-picker/picker": "^2.5.0",
+    "@sayem314/react-native-keep-awake": "^1.2.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-keep-awake": "^4.0.0",
-    "react-native-webview": "^13.4.0"
+    "react-native-device-info": "^10.9.0",
+    "react-native-webview": "^13.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
